--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "w10ch3",
   "version": "1.0.0",
   "description": "week 10 challenge 3",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "start": "node .",
@@ -15,17 +15,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^18.4.1",
+    "@commitlint/config-conventional": "^18.4.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "lint-staged": "^15.1.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/jest": "^29.5.8"
+    "@types/jest": "^29.5.8",
+    "prettier": "^3.1.0"
   }
 }
