--- a/package.json
+++ b/package.json
@@ -30,7 +30,17 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "@types/jest": "^29.5.8",
     "prettier": "^3.1.0"
+  },
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "@babel/plugin-transform-modules-commonjs"
+        ]
+      }
+    }
   }
 }
