--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start:dev": "node --watch .",
     "build": "tsc",
     "build:dev": "tsc -w",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:dev": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -40,15 +42,8 @@
   "dependencies": {
     "@babel/types": "^7.23.3",
     "chalk": "^5.3.0",
-    "dotenv": "^16.3.1"
-  },
-  "babel": {
-    "env": {
-      "test": {
-        "plugins": [
-          "@babel/plugin-transform-modules-commonjs"
-        ]
-      }
-    }
+    "dotenv": "^16.3.1",
+    "ts-jest": "^29.1.1",
+    "jest": "^29.7.0"
   }
 }
