--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:dev": "tsc -w",
     "prepare": "husky install",
     "test": "jest",
-    "test:dev": "jest --watchAll"
+    "test:dev": "jest --watchAll",
+    "test:coverage": ""
   },
   "keywords": [],
   "author": "",
