--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install",
     "test": "jest",
     "test:dev": "jest --watchAll",
-    "test:coverage": ""
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
